[package]
name = "rust_find"
version = "0.1.0"
edition = "2021"
description = "Rust find"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
regex = "1.7.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.3"
rand = "0.8.5"
